# nishika_pcb

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
common/: constant.py  merge_result.py  model_util.py  rle.py
experiments/01_mask_rcnn/: 01-1-mask_rcnn_kfold.ipynb  01-2-mask_rcnn_finalize.ipynb  20230416_tta.ipynb  20230501_eval_score_test.ipynb
experiments/02_yolov8/: make_ds.ipynb  train.ipynb
models/mask_rcnn/: mask_rcnn_dataset.py  mask_rcnn_model.py
